--- a/Vitkund/Views/Home/AddVideos.cshtml
+++ b/Vitkund/Views/Home/AddVideos.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Add Videos</h2>
 <div class="page-body">
-    
+
     <!-- Container-fluid starts-->
     <div class="container-fluid">
         <div class="edit-profile">
@@ -40,6 +40,7 @@
                                 <div class="col-sm-6 col-md-4">
                                     <div class="mb-3">
                                         <label class="form-label">Video File Title</label>
+                                        <input type="hidden" id="hiddenIdforvideo" />
                                         <input class="form-control" id="Videofiletitle" type="text" placeholder="Video Title">
                                     </div>
                                 </div>
@@ -47,7 +48,7 @@
                                     <div class="mb-3">
                                         <label class="form-label">Upload Image File</label>
                                         <input class="form-control" id="imageuploader" type="file" accept="image/png, image/jpeg,">
-
+                                        <span style="display:none" id="imageuploaderspan"></span>
                                     </div>
                                 </div>
 
@@ -56,19 +57,20 @@
                                     <div class="mb-3">
                                         <label>Upload Video File</label>
                                         <input class="form-control" id="Videouploader" type="file" accept="video/mp4">
+                                        <span style="display:none" id="videouploaderspan"></span>
                                         @*<div class="dropzone dz-clickable" id="singleFileUpload" action="/upload.php">
-                            <div class="dz-message needsclick">
-                                <i class="icon-cloud-up"></i>
-                                <h6>Drop files here or click to upload.</h6><span class="note needsclick">(This is just a demo dropzone. Selected files are <strong>not</strong> actually uploaded.)</span>
-                            </div>
-                        </div>*@
+                                                <div class="dz-message needsclick">
+                                                    <i class="icon-cloud-up"></i>
+                                                    <h6>Drop files here or click to upload.</h6><span class="note needsclick">(This is just a demo dropzone. Selected files are <strong>not</strong> actually uploaded.)</span>
+                                                </div>
+                                            </div>*@
                                     </div>
                                 </div>
 
                             </div>
 
                             <div class="card-footer text-end">
-                                <input type="button" class="btn btn-primary" onclick="AddVideos()" value="Upload Video" />
+                                <input type="button" id="btnaddupdate" class="btn btn-primary" onclick="AddVideos()" value="Upload Video" />
                                 @*<button class="btn btn-primary" id="Uploadvideobutton" onclick="AddVideos()">Upload Video</button>*@
                             </div>
                         </div>
@@ -110,6 +112,9 @@
                                         <div style="float:right; margin-right:38px;">
                                             <a class="icon-wrapper" href="javascript:void(0);" onclick="DeleteVideo(@item1.Id)"><i class="icofont icofont-trash"></i></a>
                                         </div>
+                                        <div style="float:right; margin-right:76px;">
+                                            <a class="icon-wrapper" href="javascript:void(0);" onclick="EditVideo(@item1.Id)"><i class="icofont icofont-pencil"></i></a>
+                                        </div>
                                         <a href="!#">
                                             @if (item1.VideoImage != null)
                                             {
@@ -148,11 +153,20 @@
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 
 <script>
+    $(document).ready(function () {
+        $("#videouploader").on('change', function () {
+            $("#videouploaderspan").hide();
+        });
+        $("#imageuploader").on('change', function () {
+            $("#imageuploaderspan").hide();
+        });
+    })
     function AddVideos() {
         var formData = new FormData();
         var formData1 = new FormData();
         var FileTitle = $("#Videofiletitle").val();
         var selectedchapterid = $("#Chaptersdll option:selected").val();
+        var Id = $("#hiddenIdforvideo").val();
         formData.append('file', $("#imageuploader")[0].files[0]);
         formData.append('file1', $("#Videouploader")[0].files[0]);
         $.ajax({
@@ -163,12 +177,15 @@
                 processData: false,
                 success: function (response) {
                     debugger
+                    var imageUploader = "no file selected";
+                    var videouploader = "no file selected";
                     if (response.includes(",")) {
-                        var imageUploader = response.split(",")[0];
-                        var videouploader = response.split(",")[1];
-                        var tblVideodata = { fK_Chapter: selectedchapterid, FileTitle: FileTitle, VideoFile: videouploader, VideoImage: imageUploader };
-                        finaladdmodal(tblVideodata);
+                        imageUploader = response.split(",")[0];
+                        videouploader = response.split(",")[1];
                     }
+                        var tblVideodata = { Id:Id, fK_Chapter: selectedchapterid, FileTitle: FileTitle, VideoFile: videouploader, VideoImage: imageUploader };
+                        finaladdmodal(tblVideodata);
+
                 },
                 error: function (error) {
                     // Handle errors
@@ -186,15 +203,43 @@
             datatype: 'json',
             success: function (result) {
                 debugger
-                if (result.message == "Data saved successfully") {
                     alert(result.message);
                     window.location.reload();
-                }
+
             },
             error: function (result) {
             }
         });
     }
+    function EditVideo(elm) {
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("GetVideosFile", "Home")',
+                data: JSON.stringify({ Id: elm }),
+                traditional: true,
+                contentType: 'application/json; charset=utf-8',
+                datatype:'json',
+                success: function (response) {
+                    debugger
+                    if (response.message != null) {
+                        debugger
+                        $("#Videofiletitle").val(response.message.FileTitle);
+                        $("#videouploaderspan").text(response.message.VideoFile);
+                        $("#imageuploaderspan").text(response.message.VideoImage);
+                        $("#hiddenIdforvideo").val(response.message.Id);
+                        $("#Chaptersdll").val(response.message.fK_Chapter);
+                        $("#imageuploaderspan").show();
+                        $("#videouploaderspan").show();
+                        $("#btnaddupdate").text("Update");
+                        window.scrollTo(0, 0);
+                    }
+                },
+                error: function (error) {
+                    // Handle errors
+                    console.log(error);
+                }
+            });
+        }
     function DeleteVideo(elm) {
         var result = confirm("Want to delete?");
         if (result) {
