--- a/Vitkund/Views/Home/AdminIndex.cshtml
+++ b/Vitkund/Views/Home/AdminIndex.cshtml
@@ -21,7 +21,7 @@
                         <div class="media static-widget">
                             <div class="media-body">
                                 <h6 class="font-roboto">Total Amount</h6>
-                                <h4 class="mb-0 counter">6659</h4>
+                                <h4 class="mb-0 counter">10000</h4>
                             </div>
                             <i class="fa fa-inr" style="font-size:35px;"> </i>
                         </div>
@@ -38,8 +38,8 @@
                     <div class="card-body">
                         <div class="media static-widget">
                             <div class="media-body">
-                                <h6 class="font-roboto"> Distributed Amount</h6>
-                                <h4 class="mb-0 counter">2398</h4>
+                                <h6 class="font-roboto"> Total Users</h6>
+                                <h4 class="mb-0 counter">2</h4>
                             </div>
                             <i class="fa fa-users" style="font-size:35px;"> </i>
                             <!---<svg class="fill-warning" width="41" height="46" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -67,7 +67,7 @@
                         <div class="media static-widget">
                             <div class="media-body">
                                 <h6 class="font-roboto">Total Profit</h6>
-                                <h4 class="mb-0 counter">4261</h4>
+                                <h4 class="mb-0 counter">8000</h4>
                             </div>
                             <img class="img-fluid" src="~/Content/assets/images/malamalls-s.png" alt="" style="max-width:40px;"></a>
                             <!---<svg class="fill-primary" width="44" height="46" viewBox="0 0 44 46" xmlns="http://www.w3.org/2000/svg">
@@ -88,8 +88,8 @@
                     <div class="card-body">
                         <div class="media static-widget">
                             <div class="media-body">
-                                <h6 class="font-roboto">User ID</h6>
-                                <h4 class="mb-0 counter">74523989</h4>
+                                <h6 class="font-roboto">New User </h6>
+                                <h4 class="mb-0 counter">2</h4>
                             </div>
                             <svg class="fill-warning" width="35" height="40" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <g>
@@ -121,7 +121,7 @@
                     <div class="card-body">
                         <div class="media static-widget">
                             <div class="media-body">
-                                <h6 class="font-roboto">Winning Number</h6>
+                                <h6 class="font-roboto">Referral</h6>
                                 <h4 class="mb-0 counter">7</h4>
                             </div>
                             <i class="fa fa-trophy" style="font-size:35px;"> </i>
@@ -146,11 +146,21 @@
                     <div class="card-body">
                         <div class="media static-widget">
                             <div class="media-body">
-                                <h6 class="font-roboto">Today Withdrawal Request</h6>
-                                <h4 class="mb-0 counter">14</h4>
+                                <h6 class="font-roboto">Today Login Users</h6>
+                                <h4 class="mb-0 counter">2</h4>
                             </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
-                            <!---<svg class="fill-danger" width="41" height="46" viewBox="0 0 41 46" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
+                                <g>
+                                    <g>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M9.55851 21.4562C5.88651 21.4562 2.74951 20.9012 2.74951 18.6772C2.74951 16.4532 5.86651 14.4492 9.55851 14.4492C13.2305 14.4492 16.3665 16.4342 16.3665 18.6572C16.3665 20.8802 13.2505 21.4562 9.55851 21.4562Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M9.55849 11.2776C11.9685 11.2776 13.9225 9.32356 13.9225 6.91356C13.9225 4.50356 11.9685 2.54956 9.55849 2.54956C7.14849 2.54956 5.19449 4.50356 5.19449 6.91356C5.18549 9.31556 7.12649 11.2696 9.52749 11.2776H9.55849Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        <path d="M16.8013 10.0789C18.2043 9.70388 19.2383 8.42488 19.2383 6.90288C19.2393 5.31488 18.1123 3.98888 16.6143 3.68188" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        <path d="M17.4608 13.6536C19.4488 13.6536 21.1468 15.0016 21.1468 16.2046C21.1468 16.9136 20.5618 17.6416 19.6718 17.8506" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                    </g>
+                                </g>
+                            </svg>
+                            <!---<svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-login"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
+                                                   <svg class="fill-danger" width="41" height="46" viewBox="0 0 41 46" xmlns="http://www.w3.org/2000/svg">
                               <path d="M17.5245 23.3155C24.0019 23.3152 26.3325 16.8296 26.9426 11.5022C27.6941 4.93936 24.5906 0 17.5245 0C10.4593 0 7.35423 4.93899 8.10639 11.5022C8.71709 16.8296 11.047 23.316 17.5245 23.3155Z"></path>
                               <path d="M31.6878 26.0152C31.8962 26.0152 32.1033 26.0214 32.309 26.0328C32.0007 25.5931 31.6439 25.2053 31.2264 24.8935C29.9817 23.9646 28.3698 23.6598 26.9448 23.0998C26.2511 22.8273 25.6299 22.5567 25.0468 22.2485C23.0787 24.4068 20.5123 25.5359 17.5236 25.5362C14.536 25.5362 11.9697 24.4071 10.0019 22.2485C9.41877 22.5568 8.79747 22.8273 8.10393 23.0998C6.67891 23.6599 5.06703 23.9646 3.82233 24.8935C1.6698 26.5001 1.11351 30.1144 0.676438 32.5797C0.315729 34.6148 0.0734026 36.6917 0.00267388 38.7588C-0.0521202 40.36 0.738448 40.5846 2.07801 41.0679C3.75528 41.6728 5.48712 42.1219 7.23061 42.4901C10.5977 43.2011 14.0684 43.7475 17.5242 43.7719C19.1987 43.76 20.8766 43.6249 22.5446 43.4087C21.3095 41.6193 20.5852 39.4517 20.5852 37.1179C20.5853 30.9957 25.5658 26.0152 31.6878 26.0152Z"></path>
                               <path d="M31.6878 28.2357C26.7825 28.2357 22.8057 32.2126 22.8057 37.1179C22.8057 42.0232 26.7824 46 31.6878 46C36.5932 46 40.57 42.0232 40.57 37.1179C40.57 32.2125 36.5931 28.2357 31.6878 28.2357ZM35.5738 38.6417H33.2118V41.0037C33.2118 41.8453 32.5295 42.5277 31.6879 42.5277C30.8462 42.5277 30.1639 41.8453 30.1639 41.0037V38.6417H27.802C26.9603 38.6417 26.278 37.9595 26.278 37.1177C26.278 36.276 26.9602 35.5937 27.802 35.5937H30.1639V33.2318C30.1639 32.3901 30.8462 31.7078 31.6879 31.7078C32.5296 31.7078 33.2118 32.3901 33.2118 33.2318V35.5937H35.5738C36.4155 35.5937 37.0978 36.276 37.0978 37.1177C37.0977 37.9595 36.4155 38.6417 35.5738 38.6417Z"></path>
