--- a/Vitkund/Views/Home/Contact.cshtml
+++ b/Vitkund/Views/Home/Contact.cshtml
@@ -1,81 +1,4 @@
 ﻿
-<!DOCTYPE html>
-<html lang="en">
-
-
-
-<body class="rbt-header-sticky">
-
-    <!-- Start Header Area -->
-    <!-- Mobile Menu Section -->
-    <div class="popup-mobile-menu">
-        <div class="inner-wrapper">
-            <div class="inner-top">
-                <div class="content">
-                    <div class="logo">
-                        <a href="index">
-                            <img src="~/Content/assets/images/logo.png" alt="Education Logo Images">
-                        </a>
-                    </div>
-                    <div class="rbt-btn-close">
-                        <button class="close-button rbt-round-btn"><i class="feather-x"></i></button>
-                    </div>
-                </div>
-                <ul class="navbar-top-left rbt-information-list justify-content-start" style="padding-top:30px;">
-                    <li>
-                        <a href="mailto:info@vitkund.com"><i class="feather-mail"></i>info@vitkund.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:8607609898"><i class="feather-phone"></i>8607609898</a>
-                    </li>
-                </ul>
-            </div>
-
-            <nav class="mainmenu-nav">
-                <ul class="mainmenu">
-                    <li><a href="index">Home</a></li>
-                    <li><a href="about-us">About Us</a></li>
-                    <li><a href="course">Courses</a></li>
-                    <li><a href="our-services">Our Services</a></li>
-                    <li><a href="plan">Plan</a></li>
-                    <li><a href="faq">FAQ</a></li>
-                    <li><a href="contact-us">Contact Us</a></li>
-                </ul>
-            </nav>
-
-            <div class="mobile-menu-bottom">
-                <div class="rbt-btn-wrapper mb--20">
-                    <a class="rbt-btn blink btn-border-gradient radius-round btn-sm hover-transform-none w-100 justify-content-center text-center" href="vitkund">
-                        <span>Vitkund Gaon</span>
-                    </a>
-
-                </div>
-
-                <div class="social-share-wrapper">
-                    <span class="rbt-short-title d-block">Find With Us</span>
-                    <ul class="social-icon social-default transparent-with-border justify-content-start mt--20">
-                        <li>
-                            <a href="https://m.facebook.com/profile.php?id=100087627835593&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
-                        </li>
-
-                        <li>
-                            <a href="https://instagram.com/vitkund"><i class="fab fa-instagram"></i></a>
-                        </li>
-
-                        <li>
-                            <a href="https://www.youtube.com/@("@vitkund")"><i class="fab fa-youtube"></i></a>
-                        </li>
-
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <a class="close_side_menu" href="javascript:void(0);"></a>
-
-
     <main class="rbt-main-wrapper">
 
         <div class="rbt-conatct-area bg-gradient-11 rbt-section-gap">
@@ -84,7 +7,7 @@
                     <div class="col-lg-12">
                         <div class="section-title text-center mb--60">
                             <span class="subtitle bg-secondary-opacity">Contact Us</span>
-                            <h2 class="title">Vit Kund Business Guides (We are available on Monday to Saturday 10am to 5pm) </h2>
+                            <h2 class="title">Vit Kund Business Guides <br />(We are available on Monday to Saturday 10am to 5pm) </h2>
                         </div>
                     </div>
                 </div>
@@ -186,38 +109,3 @@
     </main>
 
 
-    <!-- JS
-    ============================================ -->
-    <!-- Modernizer JS -->
-    <script src="~/Content/assets/js/vendor/modernizr.min.js"></script>
-    <!-- jQuery JS -->
-    <script src="~/Content/assets/js/vendor/jquery.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="~/Content/assets/js/vendor/bootstrap.min.js"></script>
-    <!-- sal.js -->
-    <script src="~/Content/assets/js/vendor/sal.js"></script>
-    <script src="~/Content/assets/js/vendor/swiper.js"></script>
-    <script src="~/Content/assets/js/vendor/magnify.min.js"></script>
-    <script src="~/Content/assets/js/vendor/jquery-appear.js"></script>
-    <script src="~/Content/assets/js/vendor/odometer.js"></script>
-    <script src="~/Content/assets/js/vendor/backtotop.js"></script>
-    <script src="~/Content/assets/js/vendor/isotop.js"></script>
-    <script src="~/Content/assets/js/vendor/imageloaded.js"></script>
-
-    <script src="~/Content/assets/js/vendor/wow.js"></script>
-    <script src="~/Content/assets/js/vendor/waypoint.min.js"></script>
-    <script src="~/Content/assets/js/vendor/easypie.js"></script>
-    <script src="~/Content/assets/js/vendor/text-type.js"></script>
-    <script src="~/Content/assets/js/vendor/jquery-one-page-nav.js"></script>
-    <script src="~/Content/assets/js/vendor/bootstrap-select.min.js"></script>
-    <script src="~/Content/assets/js/vendor/jquery-ui.js"></script>
-    <script src="~/Content/assets/js/vendor/magnify-popup.min.js"></script>
-    <script src="~/Content/assets/js/vendor/paralax-scroll.js"></script>
-    <script src="~/Content/assets/js/vendor/paralax.min.js"></script>
-    <script src="~/Content/assets/js/vendor/countdown.js"></script>
-    <script src="~/Content/assets/js/vendor/plyr.js"></script>
-    <!-- Main JS -->
-    <script src="~/Content/assets/js/main.js"></script>
-</body>
-
-</html>
