--- a/Vitkund/Views/Home/Login.cshtml
+++ b/Vitkund/Views/Home/Login.cshtml
@@ -1,198 +1,115 @@
-﻿
-<!DOCTYPE html>
-<html lang="en">
-
-
-
-<body class="rbt-header-sticky">
-
-    <!-- Start Header Area -->
-    <!-- Mobile Menu Section -->
-    <div class="popup-mobile-menu">
-        <div class="inner-wrapper">
-            <div class="inner-top">
-                <div class="content">
-                    <div class="logo">
-                        <a href="index">
-                            <img src="~/Content/assets/images/logo.png" alt="Education Logo Images">
-                        </a>
-                    </div>
-                    <div class="rbt-btn-close">
-                        <button class="close-button rbt-round-btn"><i class="feather-x"></i></button>
-                    </div>
-                </div>
-                <ul class="navbar-top-left rbt-information-list justify-content-start" style="padding-top:30px;">
-                    <li>
-                        <a href="mailto:info@vitkund.com"><i class="feather-mail"></i>info@vitkund.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:8607609898"><i class="feather-phone"></i>8607609898</a>
-                    </li>
-                </ul>
-            </div>
-
-            <nav class="mainmenu-nav">
-                <ul class="mainmenu">
-                    <li><a href="index">Home</a></li>
-                    <li><a href="about-us">About Us</a></li>
-                    <li><a href="course">Courses</a></li>
-                    <li><a href="our-services">Our Services</a></li>
-                    <li><a href="plan">Plan</a></li>
-                    <li><a href="faq">FAQ</a></li>
-                    <li><a href="contact-us">Contact Us</a></li>
-                </ul>
-            </nav>
-
-            <div class="mobile-menu-bottom">
-                <div class="rbt-btn-wrapper mb--20">
-                    <a class="rbt-btn blink btn-border-gradient radius-round btn-sm hover-transform-none w-100 justify-content-center text-center" href="vitkund">
-                        <span>Vitkund Gaon</span>
-                    </a>
-
-                </div>
-
-                <div class="social-share-wrapper">
-                    <span class="rbt-short-title d-block">Find With Us</span>
-                    <ul class="social-icon social-default transparent-with-border justify-content-start mt--20">
+﻿<!-- Start breadcrumb Area -->
+<div class="rbt-breadcrumb-default ptb--50 ptb_md--50 ptb_sm--30 bg-gradient-1">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="breadcrumb-inner text-center">
+                    <h2 class="title">Login</h2>
+                    <ul class="page-list">
+                        <li class="rbt-breadcrumb-item"><a href="index">Home</a></li>
                         <li>
-                            <a href="https://m.facebook.com/profile.php?id=100087627835593&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                            <div class="icon-right"><i class="feather-chevron-right"></i></div>
                         </li>
-
-                        <li>
-                            <a href="https://instagram.com/vitkund"><i class="fab fa-instagram"></i></a>
-                        </li>
-
-                        <li>
-                            <a href="https://www.youtube.com/@("@vitkund")"><i class="fab fa-youtube"></i></a>
-                        </li>
-
+                        <li class="rbt-breadcrumb-item active">Login</li>
                     </ul>
                 </div>
             </div>
-
         </div>
     </div>
-
-    <a class="close_side_menu" href="javascript:void(0);"></a>
-
-    <!-- Start breadcrumb Area -->
-    <div class="rbt-breadcrumb-default ptb--50 ptb_md--50 ptb_sm--30 bg-gradient-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb-inner text-center">
-                        <h2 class="title">Login</h2>
-                        <ul class="page-list">
-                            <li class="rbt-breadcrumb-item"><a href="index">Home</a></li>
-                            <li>
-                                <div class="icon-right"><i class="feather-chevron-right"></i></div>
-                            </li>
-                            <li class="rbt-breadcrumb-item active">Login</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Breadcrumb Area -->
+</div>
+<!-- End Breadcrumb Area -->
 
 
-    <div class="checkout_area bg-color-white" style="padding-top:30px; padding-bottom:50px;">
-        <div class="container">
-            <div class="row g-5 checkout-form">
+<div class="checkout_area bg-color-white" style="padding-top:30px; padding-bottom:50px;">
+    <div class="container">
+        <div class="row g-5 checkout-form">
 
-                <div class="col-lg-6 offset-lg-3">
-                    <div class="rbt-contact-form contact-form-style-1 max-width-auto">
+            <div class="col-lg-6 offset-lg-3">
+                <div class="rbt-contact-form contact-form-style-1 max-width-auto">
 
-                        <form class="max-width-auto">
-                            <div class="form-group">
-                                <input name="con_name" type="text">
-                                <label>Username or email *</label>
-                                <span class="focus-border"></span>
-                            </div>
-                            <div class="form-group">
-                                <input name="con_email" type="email">
-                                <label>Password *</label>
-                                <span class="focus-border"></span>
-                            </div>
+                    <form class="max-width-auto">
+                        <div class="form-group">
+                            <input name="con_name" type="text" id="usernametxtbox" required>
+                            <label>Username or email *</label>
+                            <span class="focus-border"></span>
+                        </div>
+                        <div class="form-group">
+                            <input name="con_email" id="passwordtxtbox" type="password" required>
+                            <label>Password *</label>
+                            <span class="focus-border"></span>
+                        </div>
 
-                            <div class="row mb--30">
-                                <div class="col-lg-6">
-                                    <div class="rbt-checkbox">
-                                        <input type="checkbox" id="rememberme" name="rememberme">
-                                        <label for="rememberme">Remember me</label>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="rbt-lost-password text-end">
-                                        <a class="rbt-btn-link" href="#">Lost your password?</a>
-                                    </div>
+                        <div class="row mb--30">
+                            <div class="col-lg-6">
+                                <div class="rbt-checkbox">
+                                    <input type="checkbox" id="rememberme" name="rememberme">
+                                    <label for="rememberme">Remember me</label>
                                 </div>
                             </div>
-
-                            <div class="form-submit-group">
-                                <button type="submit" class="rbt-btn btn-md btn-gradient hover-icon-reverse w-100">
-                                    <span class="icon-reverse-wrapper">
-                                        <span class="btn-text">Log In</span>
-                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                    </span>
-                                </button>
+                            <div class="col-lg-6">
+                                <div class="rbt-lost-password text-end">
+                                    <a class="rbt-btn-link" href="#">Lost your password?</a>
+                                </div>
                             </div>
-                            <br />
-                            <div class="text-center" style="">
-                                <p>OR</p>
-                                <a class="rbt-btn-link" href="signup">Signup Now</a>
-                            </div>
-                        </form>
-                    </div>
+                        </div>
 
+                        <div class="form-submit-group">
+
+                            <a href="javascript:void(0);" onclick="LoginAdmin()" type="submit" class="rbt-btn btn-md btn-gradient hover-icon-reverse w-100">
+
+                                <span class="icon-reverse-wrapper">
+                                    <span class="btn-text">Log In</span>
+                                    <span class="btn-icon"><i class="feather-arrow-right"></i></span>
+                                    <span class="btn-icon"><i class="feather-arrow-right"></i></span>
+                                </span>
+                            </a>
+
+                        </div>
+                        <br />
+                        <div class="text-center" style="">
+                            <p>OR</p>
+                            <a class="rbt-btn-link" href="signup">Signup Now</a>
+                        </div>
+                    </form>
                 </div>
 
-
             </div>
+
+
         </div>
     </div>
+</div>
 
-    <div class="rbt-separator-mid">
-        <div class="container">
-            <hr class="rbt-separator m-0">
-        </div>
+<div class="rbt-separator-mid">
+    <div class="container">
+        <hr class="rbt-separator m-0">
     </div>
+</div>
+<script>
 
+    function LoginAdmin() {
+        var username = $("#usernametxtbox").val();
+        var password = $("#passwordtxtbox").val();
+        var tbladmin = { Username: username, Password: password }
+        $.ajax({
+                type: 'POST',
+                url: '@Url.Action("LoginAdmin", "Home")',
+                data: JSON.stringify({ tbladmin }),
+                traditional: true,
+                contentType: 'application/json; charset=utf-8',
+                datatype:'json',
+                success: function (response) {
+                    debugger
+                    if (response.message == "Logged In")
+                        window.location.href="/AdminIndex";
+                    else if (response.message == "User Not Found")
+                        alert(response.message)
+                },
+                error: function (error) {
+                    // Handle errors
+                    console.log(error);
+                }
+            });
+    }
+</script>
 
-    <!-- JS
-    ============================================ -->
-    <!-- Modernizer JS -->
-    <script src="~/Content/assets/js/vendor/modernizr.min.js"></script>
-    <!-- jQuery JS -->
-    <script src="~/Content/assets/js/vendor/jquery.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="~/Content/assets/js/vendor/bootstrap.min.js"></script>
-    <!-- sal.js -->
-    <script src="~/Content/assets/js/vendor/sal.js"></script>
-    <script src="~/Content/assets/js/vendor/swiper.js"></script>
-    <script src="~/Content/assets/js/vendor/magnify.min.js"></script>
-    <script src="~/Content/assets/js/vendor/jquery-appear.js"></script>
-    <script src="~/Content/assets/js/vendor/odometer.js"></script>
-    <script src="~/Content/assets/js/vendor/backtotop.js"></script>
-    <script src="~/Content/assets/js/vendor/isotop.js"></script>
-    <script src="~/Content/assets/js/vendor/imageloaded.js"></script>
-
-    <script src="~/Content/assets/js/vendor/wow.js"></script>
-    <script src="~/Content/assets/js/vendor/waypoint.min.js"></script>
-    <script src="~/Content/assets/js/vendor/easypie.js"></script>
-    <script src="~/Content/assets/js/vendor/text-type.js"></script>
-    <script src="~/Content/assets/js/vendor/jquery-one-page-nav.js"></script>
-    <script src="~/Content/assets/js/vendor/bootstrap-select.min.js"></script>
-    <script src="~/Content/assets/js/vendor/jquery-ui.js"></script>
-    <script src="~/Content/assets/js/vendor/magnify-popup.min.js"></script>
-    <script src="~/Content/assets/js/vendor/paralax-scroll.js"></script>
-    <script src="~/Content/assets/js/vendor/paralax.min.js"></script>
-    <script src="~/Content/assets/js/vendor/countdown.js"></script>
-    <script src="~/Content/assets/js/vendor/plyr.js"></script>
-    <!-- Main JS -->
-    <script src="~/Content/assets/js/main.js"></script>
-</body>
-
-</html>
