--- a/Vitkund/Views/Shared/_AdminLayout.cshtml
+++ b/Vitkund/Views/Shared/_AdminLayout.cshtml
@@ -60,7 +60,7 @@
         <div class="page-header">
             <div class="header-wrapper row m-0">
                 <div class="header-logo-wrapper col-auto p-0">
-                    <div class="logo-wrapper"><a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo.png" alt=""></a></div>
+                    <div class="logo-wrapper"><a href="/"><img class="img-fluid" src="~/Content/admin/assets/images/logo.png" alt=""></a></div>
                     <div class="toggle-sidebar">
                         <div class="status_toggle sidebar-toggle d-flex">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -91,13 +91,13 @@
                         <input class="form-control" type="text" placeholder="Search here.." aria-label="search" aria-describedby="basic-addon1">
                     </div>
                     <div class="d-md-none resp-serch-input" style="margin-right:50px; float:left;">
-                        <a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo.png" alt="" style="max-width:120px;"></a>
+                        <a href="/"><img class="img-fluid" src="~/Content/admin/assets/images/logo.png" alt="" style="max-width:120px;"></a>
                     </div>
                 </div>
                 <div class="nav-right col-10 col-sm-6 pull-right right-header p-0">
                     <ul class="nav-menus">
                         <li class="d-md-none resp-serch-input" style="margin-right:50px; float:left;">
-                            <a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo.png" alt="" style="max-width:120px;"></a>
+                            <a href="/"><img class="img-fluid" src="~/Content/admin/assets/images/logo.png" alt="" style="max-width:120px;"></a>
                         </li>
                         <li class="d-md-none resp-serch-input">
                             <div class="resp-serch-box"><i data-feather="search"></i></div>
@@ -119,8 +119,8 @@
                                 </svg>
                             </div>
                             <ul class="profile-dropdown onhover-show-div">
-                                <li><a href="add-artist.html"><i data-feather="user"></i><span>Account </span></a></li>
-                                <li><a href="index.html"><i data-feather="log-out"> </i><span>Log Out</span></a></li>
+                                @*<li><a href="add-artist.html"><i data-feather="user"></i><span>Account </span></a></li>*@
+                                <li><a href="Login"><i data-feather="log-out"> </i><span>Log Out</span></a></li>
                             </ul>
                         </li>
                     </ul>
@@ -134,16 +134,16 @@
             <div class="sidebar-wrapper">
                 <div>
                     <div class="logo-wrapper">
-                        <a href="index.html"><img class="img-fluid for-light" src="~/Content/admin/assets/images/logo.png" alt=""><img class="img-fluid for-dark" src="~/Content/admin/assets/images/logo/small-white-logo.png" alt=""></a>
+                        <a href="/"><img class="img-fluid for-light" src="~/Content/admin/assets/images/logo.png" alt=""><img class="img-fluid for-dark" src="~/Content/admin/assets/images/logo/small-white-logo.png" alt=""></a>
                         <div class="back-btn"><i class="fa fa-angle-left"></i></div>
                     </div>
-                    <div class="logo-icon-wrapper"><a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo-icon.png" alt=""></a></div>
+                    <div class="logo-icon-wrapper"><a href="/"><img class="img-fluid" src="~/Content/admin/assets/images/logo-icon.png" alt=""></a></div>
                     <nav class="sidebar-main">
                         <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
                         <div id="sidebar-menu">
                             <ul class="sidebar-links" id="simple-bar">
                                 <li class="back-btn">
-                                    <a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo-icon.png" alt=""></a>
+                                    <a href="/"><img class="img-fluid" src="~/Content/admin/assets/images/logo-icon.png" alt=""></a>
                                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                                 </li>
                                 <li class="sidebar-list">
@@ -203,9 +203,9 @@
                                     </a>
 
                                 </li>
-                               
+
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="index.html">
+                                    <a class="sidebar-link sidebar-title" href="Login">
                                         <i data-feather="log-out"> </i><span>Logout</span>
                                     </a>
 
